--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,4 @@
-import java.nio.file.Paths
-
 buildscript {
-
   repositories {
     maven {
       url "https://plugins.gradle.org/m2/"
@@ -9,30 +6,25 @@ buildscript {
     mavenCentral()
     google()
   }
+
   dependencies {
-    classpath 'com.android.tools.build:gradle:7.2.2'
+    classpath("com.android.tools.build:gradle:7.2.2")
   }
 }
 
-static def findNodeModulePath(baseDir, packageName) {
-  def basePath = baseDir.toPath().normalize()
-  // Node's module resolution algorithm searches up to the root directory,
-  // after which the base path will be null
-  while (basePath) {
-    def candidatePath = Paths.get(basePath.toString(), "node_modules", packageName)
-    if (candidatePath.toFile().exists()) {
-      return candidatePath.toString()
-    }
-    basePath = basePath.getParent()
-  }
-  return null
+def resolveBuildType() {
+    Gradle gradle = getGradle()
+    String tskReqStr = gradle.getStartParameter().getTaskRequests()['args'].toString()
+
+    return tskReqStr.contains('Release') ? 'release' : 'debug'
 }
 
-def findNodeModulePath(packageName) {
-  // Don't start in the project dir, as its path ends with node_modules/react-native-gesture-handler/android
-  // we want to go two levels up, so we end up in the first_node modules and eventually
-  // search upwards if the package is not found there
-  return findNodeModulePath(projectDir.toPath().parent.parent.toFile(), packageName)
+def isNewArchitectureEnabled() {
+  // To opt-in for the New Architecture, you can either:
+  // - Set `newArchEnabled` to true inside the `gradle.properties` file
+  // - Invoke gradle with `-newArchEnabled=true`
+  // - Set an environment variable `ORG_GRADLE_PROJECT_newArchEnabled=true`
+  return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
 }
 
 if (isNewArchitectureEnabled()) {
@@ -49,14 +41,21 @@ def reactNativeArchitectures() {
   return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
 }
 
-def REACT_NATIVE_DIR = findNodeModulePath("react-native")
-
 repositories {
   mavenCentral()
 }
 
 android {
   compileSdkVersion safeExtGet("compileSdkVersion", 28)
+
+  // Used to override the NDK path/version on internal CI or by allowing
+  // users to customize the NDK path/version from their root project (e.g. for M1 support)
+  if (rootProject.hasProperty("ndkPath")) {
+    ndkPath rootProject.ext.ndkPath
+  }
+  if (rootProject.hasProperty("ndkVersion")) {
+    ndkVersion rootProject.ext.ndkVersion
+  }
 
   buildFeatures {
     prefab true
@@ -65,14 +64,13 @@ android {
   defaultConfig {
     minSdkVersion safeExtGet('minSdkVersion', 16)
     targetSdkVersion safeExtGet('targetSdkVersion', 28)
-
-    var appProject = rootProject.allprojects.find {it.plugins.hasPlugin('com.android.application')}
+    versionCode 1
+    versionName "1.0"
+    buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
     externalNativeBuild {
       cmake {
         cppFlags "-O2 -frtti -fexceptions -Wall -Wno-unused-variable -fstack-protector-all"
-        arguments "-DAPP_BUILD_DIR=${appProject.buildDir}",
-                "-DREACT_NATIVE_DIR=${REACT_NATIVE_DIR}",
-                "-DANDROID_STL=c++_shared"
+        arguments "-DANDROID_STL=c++_shared"
         abiFilters (*reactNativeArchitectures())
       }
     }
@@ -84,15 +82,23 @@ android {
   }
 
   externalNativeBuild {
-     cmake {
-          path "./CMakeLists.txt"
-      }
+    cmake {
+      path "CMakeLists.txt"
+    }
+  }
+  packagingOptions {
+    doNotStrip resolveBuildType() == 'debug' ? "**/**/*.so" : ''
+    excludes = [
+            "META-INF",
+            "META-INF/**",
+            "**/libjsi.so",
+    ]
   }
 }
 
 dependencies {
   //noinspection GradleDynamicVersion
-  implementation 'com.facebook.react:react-native:+'
+  implementation 'com.facebook.react:react-android:+'
 }
 
 // Resolves "LOCAL_SRC_FILES points to a missing file, Check that libfb.so exists or that its path is correct".
