feat: update example to rn 0.71

--- a/example/package.json
+++ b/example/package.json
@@ -6,21 +6,20 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start"
+    "start": "react-native start",
+    "pods": "pod-install --quiet"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.66.3",
-    "react-native-maps": "^0.29.4",
-    "supercluster": "^7.1.2"
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-maps": "^1.4.0",
+    "supercluster": "^7.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/runtime": "^7.16.3",
-    "@types/react": "^17.0.37",
-    "@types/react-native": "^0.66.8",
-    "@types/supercluster": "^5.0.3",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "metro-react-native-babel-preset": "^0.66.2"
+    "metro-react-native-babel-preset": "0.73.7"
   }
 }
