--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-clusterer",
   "version": "1.2.2",
-  "description": "Description",
+  "description": "React Native clustering library using C++ Supercluster implementation",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
