--- a/example/package.json
+++ b/example/package.json
@@ -10,10 +10,11 @@
     "pods": "pod-install --quiet"
   },
   "dependencies": {
+    "@types/supercluster": "^7.1.3",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-maps": "^1.4.0",
-    "supercluster": "^7.1.5"
+    "supercluster": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
