--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,6 +45,8 @@ repositories {
   mavenCentral()
 }
 
+def IS_NEW_ARCHITECTURE_ENABLED = isNewArchitectureEnabled()
+
 android {
   compileSdkVersion safeExtGet("compileSdkVersion", 28)
 
@@ -70,7 +72,9 @@ android {
     externalNativeBuild {
       cmake {
         cppFlags "-O2 -frtti -fexceptions -Wall -Wno-unused-variable -fstack-protector-all"
-        arguments "-DANDROID_STL=c++_shared"
+        arguments "-DANDROID_STL=c++_shared",
+                  "-DRNS_NEW_ARCH_ENABLED=${IS_NEW_ARCHITECTURE_ENABLED}",
+                  "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
         abiFilters (*reactNativeArchitectures())
       }
     }
